[package]
name = "video-signaling"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1", features = ["v4"] }