[package]
name = "video-signaling"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
actix = "0.13"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Ajouté
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full", "sync"] }